tests/integrations/basic-fail/tests/actual_tests/diag_not_found_one.stderr
error[E0308]: mismatched types
 --> tests/actual_tests/diag_not_found_one.rs:6:9
  |
6 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> tests/actual_tests/diag_not_found_one.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^ -----------

error[E0308]: mismatched types
 --> tests/actual_tests/diag_not_found_one.rs:9:9
  |
9 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> tests/actual_tests/diag_not_found_one.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^ -----------

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
