tests/integrations/basic-fail/tests/actual_tests/diag_not_found_one.rs
pub fn add(left: usize, right: usize) -> usize {
    left + right
}

fn main() {
    add("42", 3);
    //~^ E0308

    add("42", 3);
}
